# unitree-A1

./: .bash_profile  .bashrc  .gitignore  .profile  .realsense-config.json  .xinputrc  a1_body_footprint_filter_v6_7.py  a1_body_safety_filter.py  a1_body_safety_filter_footprint_v2.py  a1_camera_trigger_server.py  a1_cmd_passthrough_loop.sh  a1_follow_camera_server.py  a1_follow_lowlatency_depth_server.py  a1_follow_lowlatency_depth_server_raw_v6_5.py  a1_laserscan_obstacle_writer.py  a1_lidar_footprint_filter_v6_8.py  a1_lidar_footprint_filter_v6_8_2.py  a1_nx_start_all.sh  a1_nx_start_all_v6_1.sh  a1_nx_start_all_v6_2.sh  a1_nx_start_all_v6_3.sh  a1_nx_start_all_v6_4_body.sh  a1_nx_start_all_v6_5_body.sh  a1_nx_start_follow_v6_7_body.sh  a1_nx_start_follow_v6_8_2_body.sh  a1_nx_start_follow_v6_8_3_body.sh  a1_nx_start_follow_v6_8_body.sh  a1_nx_start_v2_min.sh  a1_nx_stop_follow_v6.8.3.sh  a1_nx_stop_follow_v6_7.sh  a1_nx_stop_follow_v6_8.sh  a1_nx_stop_save_map.sh  a1_nx_stop_v2_min.sh  a1_slam_route_fallback_node.py  a1_slam_route_fallback_node_v2base.py  a1_slam_route_fallback_node_v6_2.py  a1_slam_route_fallback_node_v6_3.py  a1_slam_route_fallback_node_v6_4_raw.py  a1_slam_route_fallback_node_v6_5_passive.py  a1_slamware_scan_only.launch  (+10 more)
.codex/: auth.json  config.toml  goals_1.sqlite  goals_1.sqlite-shm  goals_1.sqlite-wal  history.jsonl  installation_id  logs_2.sqlite-shm  memories_1.sqlite  memories_1.sqlite-shm  memories_1.sqlite-wal  models_cache.json  state_5.sqlite  state_5.sqlite-shm  state_5.sqlite-wal  version.json
.codex/shell_snapshots/: 019eb0c7-4503-7c00-83c2-d6e629b4d4bb.1781082310748899083.sh  019eb0ee-7aac-7b12-bc57-cfe3284f7a54.1781084879611165445.sh  019eb182-25a9-7f12-b036-4cd105c211d8.1781094557177907164.sh  019eb187-f422-7f30-8018-4fcd25eb355f.1781094938038994999.sh
RobotSLAMSystem/: package-lock.json
RobotSLAMSystem/slam_planner/: clear.sh  index.js  odom.sh  save.sh  slam_planner.sh  start.sh  stop.sh
RobotVisionSystem/: start.sh
RobotVisionSystem/Parameters/: parameters.txt
a1_logs/20260615_134844/: camera_status_initial.txt  route_status_initial.txt
a1_logs/20260615_134859/: camera_status_initial.txt
a1_logs/20260615_135532/: camera_status_initial.txt
a1_logs/20260615_135718/: camera_status_initial.txt
a1_logs/20260615_140105/: camera_status_initial.txt
a1_logs/20260615_140855/: camera_status_initial.txt  route_status_initial.txt
a1_logs/20260615_140913/: camera_status_initial.txt
a1_logs/20260615_141454/: camera_status_initial.txt
a1_logs/20260615_141854/: camera_status_initial.txt
a1_logs/20260615_142219/: camera_status_initial.txt
a1_logs/20260615_142422/: camera_status_initial.txt
a1_logs/20260615_144906/: camera_status_initial.txt
a1_logs/20260615_145433/: camera_status_initial.txt
a1_logs/20260615_151302/: camera_status_initial.txt
a1_logs/20260615_152652/: camera_status_initial.txt
a1_logs/20260615_154336/: camera_status_initial.txt
a1_logs/20260615_154822/: camera_status_initial.txt
a1_logs/20260629_202532/: camera_status_initial.txt
a1_maps/: a1_lab.pgm  a1_lab.yaml
a1_nav_logs/: latest_path.txt
a1_nav_logs/20260701_151714/: preflight.txt
a1_nav_logs/20260701_152818/: preflight.txt
a1_nav_logs/20260701_202928/: ip_addr.txt  nc_slamware_1445.txt  ping_atom.txt  ping_slamware.txt  route_atom.txt  route_slamware.txt
a1run_logs/20260630_011525/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_011747/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_012243/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_012813/: controllers_after_start.txt  initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_013701/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_015712/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_020456/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_020606/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_104132/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_104519/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_105644/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_105808/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_110022/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_110913/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_134804/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_135520/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_140522/: initial_joint_states.txt  initial_joy.txt
a1run_logs/20260630_140713/: initial_joint_states.txt
catkin_ws/src/slamrplidar/slam_planner/: CMakeLists.txt  INTEGRATED_NAVIGATION.md  README.md  REALSENSE_WANDER_OBSTACLE_AVOIDANCE.md  TEB_VIA_TELEOP.md  WANDER_OBSTACLE_AVOIDANCE.md  package.xml
catkin_ws/src/slamrplidar/slam_planner/launch/: a1_online_nav_bias.launch  a1_saved_map_nav_pure.launch  teb_via_teleop.launch  wander_obstacle_avoidance.launch
catkin_ws/src/slamrplidar/slam_planner/scripts/: a1_drift_guard_node.py  a1_lateral_guard_node.py  a1_odom_to_tf.py  install_realsense_dkms.sh  integrated_mapping_navigation_manager.py
catkin_ws/src/slamrplidar/slam_planner/src/: realsense_wander_obstacle_avoidance.cpp  slam_base_controller.cpp  teb_via_teleop.cpp
cmake-3.16.9/: CMakeCPackOptions.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_uninstall.cmake  install_manifest.txt
unitree_legged_sdk/: CMakeLists.txt  CMakeLists.txt.bak
unitree_legged_sdk/examples/: a1_height_loop.cpp  a1_height_mode1_native.cpp  a1_height_sweep_mode1.cpp  a1_high_follow_driver.cpp  a1_high_follow_driver_v2.cpp  a1_low_action_safety_fsm.cpp  a1_low_probe.cpp  a1_low_raise_small.cpp  a1_low_readonly.cpp  a1_low_ready_cycle.cpp  a1_low_ready_wait_trigger.cpp  a1_low_takeover_hold.cpp  a1_low_takeover_hold2.cpp  a1_mode_test_8080.cpp  a1_pose_once.cpp  example_stop.cpp  example_walk.cpp  lcm_server_high.cpp
(+172 files in other folders)
